--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mintesinot Fino Portfolio Website</title>
+  <title>Minte Portfolio Website</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
@@ -25,7 +25,7 @@
       <h1>Hi, I'm Mintesinot Fino</h1>
       <h3>I'm Software Developer</h3>
       <br>
-      <p>Welcome to my portfolio website. Explore my work and get in touch!</p>
+      <p>Welcome to my portfolio website!</p>
     </div>
   </section>
 
